test/elaboration/bad/typeclass_multiple_definitions.mle
class H 'a {  }
class H 'a {  }